# controllers/userController.js
@@ -134,6 +134,64 @@ exports.login = async (req, res) => {
     return res.status(400).send('Invalid credentials');
   }
 
+  const role = await knex('roles').where({role_id: user.role_id}).first();
+  const roleName = role.role_name;
+
+
   const token = jwt.sign({ userId: user.user_id, username: user.username, role_id: user.role_id }, process.env.JWT_SECRET);
-  res.json({ token });
+  res.json({ token, roleName });
 };
+
+/**
+ * @swagger
+ * /get-role:
+ *   get:
+ *     security:
+ *       - Authorization: []  
+ *     summary: Get User Role
+ *     description: Get User Role.
+ *     tags:
+ *       - Users
+ *     responses:
+ *       200:
+ *         description: Login successful, JWT token returned
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 token:
+ *                   type: string
+ *                   example: "Admin, Member..."
+ *       400:
+ *         description: Invalid credentials
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: string
+ *               example: "Invalid credentials"
+ *       500:
+ *         description: Server error during login
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 error:
+ *                   type: string
+ *                   example: "An error occurred during login."
+ */
+exports.decodeRole = async (req, res) => {
+  const authHeader = req.headers.authorization;
+  if (!authHeader || !authHeader.startsWith('Bearer ')) {
+    return res.status(401).json({ error: 'Authorization header missing or incorrect' });
+  }
+  const token = authHeader.split(' ')[1];
+  const decoded = jwt.verify(token, process.env.JWT_SECRET);
+  const dataSelect = {
+    role_id: decoded.role_id
+  }
+  const role = await knex('roles').where(dataSelect).first();
+  const roleName = role.role_name;
+  res.json({ roleName });
+}
